2010-11-20  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.0 released.

	* tramp.el (tramp-handle-insert-file-contents): Don't use
	`file-remote-p' (due to compatibility).

	* tramp-sh.el (tramp-do-copy-or-rename-file-directly)
	(tramp-do-copy-or-rename-file-out-of-band): Use `ignore-errors'.

2010-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-line-beginning-position)
	(tramp-compat-line-end-position): Remove them.

	* tramp.el (tramp-parse-rhosts-group, tramp-parse-shosts-group)
	(tramp-parse-sconfig-group, tramp-parse-passwd-group)
	(tramp-parse-netrc-group, tramp-parse-putty-group)
	* tramp-cmds.el (tramp-append-tramp-buffers)
	* tramp-sh.el (tramp-do-file-attributes-with-ls)
	(tramp-sh-handle-file-selinux-context)
	(tramp-sh-handle-file-name-all-completions)
	(tramp-sh-handle-insert-directory)
	(tramp-sh-handle-expand-file-name, tramp-find-executable)
	(tramp-wait-for-output, tramp-send-command-and-read)
	* tramp-smb.el (tramp-smb-read-file-entry)
	(tramp-smb-get-cifs-capabilities)
	* tramp-util.el (tramp-PC-expand-many-files): Use `point-at-eol'.

	* tramp-sh.el (tramp-sh-handle-insert-directory) Use `point-at-bol'.
	(tramp-remote-coding-commands): Add an alternative using "base64
	-d -i".  This is needed for older base64 versions from GNU
	coreutils.  Reported by Klaus Reichl
	<Klaus.Reichl@thalesgroup.com>.

2010-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Do not set
	`permanent-local' property for `backup-by-copying-when-mismatch'.

2010-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): For root, preserve
	owner and group when editing files.  (Bug#7289)

2010-10-28  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (autoloads): Use $(builddir) prefix.

2010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (builddir): New variable, used instead of srcdir.