@@ -2861,12 +2861,7 @@ User is always nil."
 	    (setq buffer-file-name filename)
 	    (setq buffer-read-only (not (file-writable-p filename)))
 	    (set-visited-file-modtime)
-	    (set-buffer-modified-p nil)
-	    ;; For root, preserve owner and group when editing files.
-	    (when (string-equal
-		   (tramp-file-name-handler 'file-remote-p filename 'user)
-		   "root")
-	      (set (make-local-variable 'backup-by-copying-when-mismatch) t)))
+	    (set-buffer-modified-p nil))
 	  (when (and (stringp local-copy)
 		     (or remote-copy (null tramp-temp-buffer-file-name)))
 	    (delete-file local-copy))
