@@ -1,3 +1,8 @@
+2010-11-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-insert-file-contents): Do not set
+	`backup-by-copying-when-mismatch'.
+
 2010-11-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.2.0 released.
